--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "memmove/=./node_modules/memmove/src/",
     "ds-test/=./node_modules/ds-test/src/",
     "solmate/=./node_modules/@rari-capital/solmate/src/",
-    "forge-std/=./node_modules/forge-std/src/"
+    "forge-std/=./node_modules/forge-std/src/",
+    "quadromud/=./node_modules/quadromud/src/"
   ]
 }
