chore: add quadrosol with git

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -32,8 +32,8 @@
     "memmove": "https://github.com/brockelmore/memmove.git#d577ecd1bc43656f4032edf4daa9797f756a8ad2",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "quadromud": "file:./../../../quadromud",
-    "quadrosol": "file:./../../../quadrosol",
+    "quadromud": "ssh://git@github.com/therealbytes/quadromud",
+    "quadrosol": "ssh://git@github.com/therealbytes/quadrosol",
     "rimraf": "^3.0.2",
     "run-pty": "^4.0.3",
     "solhint": "^3.3.7",
