--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -32,8 +32,8 @@
     "memmove": "https://github.com/brockelmore/memmove.git#d577ecd1bc43656f4032edf4daa9797f756a8ad2",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "quadromud": "ssh://git@github.com/therealbytes/quadromud",
-    "quadrosol": "ssh://git@github.com/therealbytes/quadrosol",
+    "quadromud": "ssh://git@github.com/therealbytes/quadromud#acb480e3d3597c6f559329d26cefddd6c8f7f969",
+    "quadrosol": "ssh://git@github.com/therealbytes/quadrosol#664b34ff1593afd6df305deba808685396425b7f",
     "rimraf": "^3.0.2",
     "run-pty": "^4.0.3",
     "solhint": "^3.3.7",
