feat: add quadromud to monorepo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,11 @@
     "std-contracts/=./node_modules/@latticexyz/std-contracts/src/",
     "solecs/=./node_modules/@latticexyz/solecs/src/",
     "memmove/=./node_modules/memmove/src/",
-    "ds-test/=./node_modules/ds-test/src/",
     "solmate/=./node_modules/@rari-capital/solmate/src/",
+    "ds-test/=./node_modules/ds-test/src/",
     "forge-std/=./node_modules/forge-std/src/",
-    "quadromud/=./node_modules/quadromud/src/"
+    "pclib/=./node_modules/pclib/src/",
+    "quadrosol/=./node_modules/quadrosol/src/",
+    "quadromud/=./packages/quadromud/src/",
   ]
 }
