--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -20,20 +20,18 @@
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/bytes": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
-    "@latticexyz/cli": "^1.30.1",
-    "@latticexyz/solecs": "^1.30.1",
-    "@latticexyz/std-contracts": "^1.30.1",
+    "@latticexyz/cli": "1.33.1",
+    "@latticexyz/solecs": "1.33.1",
+    "@latticexyz/std-contracts": "1.33.1",
     "@rari-capital/solmate": "https://github.com/rari-capital/solmate.git#851ea3baa4327f453da723df75b1093b58b964dc",
     "@typechain/ethers-v5": "^10.1.1",
     "@types/node": "^18.11.9",
     "ds-test": "https://github.com/dapphub/ds-test.git#c7a36fb236f298e04edf28e2fee385b80f53945f",
     "ethers": "^5.7.1",
-    "forge-std": "https://github.com/foundry-rs/forge-std.git#4d36e3f7e2168c8155c641eb0f80e85cd584bd1c",
+    "forge-std": "^1.1.2",
     "memmove": "https://github.com/brockelmore/memmove.git#d577ecd1bc43656f4032edf4daa9797f756a8ad2",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "quadromud": "ssh://git@github.com/therealbytes/quadromud#abee506fb11af6d266dcdde0a51e390957b380c3",
-    "quadrosol": "ssh://git@github.com/therealbytes/quadrosol#edb19982531e65da1c1590a1c15b2f1c2e74d17c",
     "rimraf": "^3.0.2",
     "run-pty": "^4.0.3",
     "solhint": "^3.3.7",
