--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "solmate/=./node_modules/@rari-capital/solmate/src/",
     "ds-test/=./node_modules/ds-test/src/",
     "forge-std/=./node_modules/forge-std/",
+    "pclib/=./node_modules/pclib/src/",
     "quadrosol/=./node_modules/quadrosol/src/",
     "quadromud/=./packages/quadromud/src/",
   ]
