--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "prepare": "yarn workspace contracts prepare",
-    "dev": "run-pty % yarn dev:node % yarn dev:client % yarn dev:contracts",
+    "dev": "run-pty % yarn dev:client % yarn dev:contracts",
     "dev:client": "yarn workspace client run dev",
     "dev:node": "yarn workspace contracts run devnode",
     "dev:contracts": "yarn workspace contracts run dev"
