--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -9,7 +9,7 @@
     "devnode": "mud devnode",
     "test": "mud test",
     "types": "mud types",
-    "dev": "mud deploy-contracts --dev --watch --openUrl http://localhost:3000?dev=true",
+    "dev": "mud deploy-contracts --dev --watch --rpc http://localhost:9545 --openUrl http://localhost:3000?dev=false",
     "deploy": "mud deploy-contracts",
     "lint": "yarn prettier && yarn solhint",
     "----- INTERNAL -----": "---------------------------",
@@ -20,7 +20,7 @@
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/bytes": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
-    "@latticexyz/cli": "1.33.1",
+    "@latticexyz/cli": "1.30.1",
     "@latticexyz/solecs": "1.33.1",
     "@latticexyz/std-contracts": "1.33.1",
     "@rari-capital/solmate": "https://github.com/rari-capital/solmate.git#851ea3baa4327f453da723df75b1093b58b964dc",
