--- a/packages/quadromud/package.json
+++ b/packages/quadromud/package.json
@@ -8,7 +8,7 @@
     "test": "mud test"
   },
   "devDependencies": {
-    "@latticexyz/cli": "1.33.1",
+    "@latticexyz/cli": "1.30.1",
     "@latticexyz/solecs": "1.33.1",
     "@latticexyz/std-contracts": "1.33.1",
     "@rari-capital/solmate": "^6.4.0",
@@ -16,6 +16,7 @@
     "ds-test": "https://github.com/dapphub/ds-test.git#c7a36fb236f298e04edf28e2fee385b80f53945f",
     "forge-std": "^1.1.2",
     "memmove": "https://github.com/brockelmore/memmove.git",
-    "quadrosol": "ssh://git@github.com/therealbytes/quadrosol#main"
+    "quadrosol": "ssh://git@github.com/therealbytes/quadrosol#concrete",
+    "pclib": "ssh://git@github.com/therealbytes/pclib#main"
   }
 }
