chore: fix quadrosol commit

--- a/packages/quadromud/package.json
+++ b/packages/quadromud/package.json
@@ -16,6 +16,6 @@
     "ds-test": "https://github.com/dapphub/ds-test.git#c7a36fb236f298e04edf28e2fee385b80f53945f",
     "forge-std": "^1.1.2",
     "memmove": "https://github.com/brockelmore/memmove.git",
-    "quadrosol": "ssh://git@github.com/therealbytes/quadrosol#main"
+    "quadrosol": "ssh://git@github.com/therealbytes/quadrosol#83f17db5d76382b052209605f64e2cb2ef3cf068"
   }
 }
